--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     def versionMajor = Integer.parseInt(VERSION_MAJOR)
@@ -29,6 +30,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -38,6 +43,25 @@ dependencies {
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta7"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
+
+    // DI
+    api 'com.google.dagger:dagger:2.28.1'
+    kapt 'com.google.dagger:dagger-compiler:2.28.1'
+
+    // UI
+    implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
+
+    // Media
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.7'
+
+    // Logs
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Tests
     testImplementation 'junit:junit:4.12'
