--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     dataBinding {
         enabled = true
     }
@@ -52,7 +57,9 @@ dependencies {
 
     // DI
     api 'com.google.dagger:dagger:2.28.1'
+    api 'com.google.dagger:dagger-android:2.28.1'
     kapt 'com.google.dagger:dagger-compiler:2.28.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.28.1'
 
     // UI
     implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
