--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 
     // DI
-    api 'com.google.dagger:dagger:2.28.1'
-    api 'com.google.dagger:dagger-android:2.28.1'
+    implementation 'com.google.dagger:dagger:2.28.1'
+    implementation 'com.google.dagger:dagger-android:2.28.1'
+    implementation 'com.google.dagger:dagger-android-support:2.28.1'
     kapt 'com.google.dagger:dagger-compiler:2.28.1'
     kapt 'com.google.dagger:dagger-android-processor:2.28.1'
 
