--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.28.1'
 
     // UI
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
 
     // Media
