--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta7"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
@@ -63,7 +63,7 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.28.1'
 
     // UI
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'ru.terrakok.cicerone:cicerone:5.1.1'
 
     // Media
@@ -74,6 +74,6 @@ dependencies {
 
     // Tests
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
